GNOME Bugzilla – Bug 721053
GtkColorSwatch lacks an accessible name
Last modified: 2014-01-05 04:31:26 UTC
Created attachment 264888 [details] accessible-event listener Steps to reproduce: 1. Launch the attached accessible event listener in a terminal 2. Launch the gtk3-demo Color Chooser demo 3. Press the "Change the above color" button 4. Arrow amongst the color swatches Expected results: The name of the color would appear in the terminal. Actual results: The name of the color does not appear in the terminal. Note: The name of the color is exposed as the description, but that is inconsistent with other widgets (run the listener with other Gtk+ demos to compare). The thing which ATs should automatically, unconditionally present to end users should be exposed to ATs via the object's name. Descriptions are nice for additional, optional, and potentially more verbose information which the user can obtain from his/her AT upon request.