GtkColorChooserWidget: Set accessible names

As pointed out in
https://bugzilla.gnome.org/show_bug.cgi?id=721053
we should set the accessible name on the color swatch widgets,
not the descriptions.